# protreim

./: .gitignore  MANIFEST.in  Makefile  README.md  config.json  entry_points.cfg  requirements.txt  setup.cfg
.circleci/: config.yml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  protreim.config.html  protreim.gui.html  protreim.gui.windows.columns.html  protreim.gui.windows.html  protreim.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  protreim.config.doctree  protreim.doctree  protreim.gui.doctree  protreim.gui.windows.columns.doctree  protreim.gui.windows.doctree
docs/_sources/: index.rst.txt  modules.rst.txt  protreim.gui.windows.columns.rst.txt  protreim.gui.windows.rst.txt
docs_src/: conf.py  protreim.config.rst  protreim.gui.rst  protreim.rst
protreim/: __init__.py  cli.py  common.py  foreground.py  interface.py  process.py  typing.py
protreim/config/: __init__.py  background.py  base.py  font.py  outline.py  text.py  title.py
protreim/gui/: __init__.py  icon.py
protreim/gui/windows/: base.py  root.py
protreim/gui/windows/columns/: config.py  main.py
tests/: __init__.py  test_config.json  test_config.py  test_interface.py  test_process.ipynb
