[metadata]
name = protreim
version = attr: protreim.__version__
author = Shuhei Nitta
author_email = sn.ecoreuse@gmail.com
url = https://github.com/hinihatetsu/protreim
description = Processing tire image
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.8
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    pillow
    opencv-python
    pysimplegui
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    tests
